fixe des warns pour ability